--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
-    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+    "routes": [
+      { "src": "/api/(.*)", "dest": "/api/server.js" }
+    ]
   }
+  
