--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-    "routes": [
-      { "src": "/api/(.*)", "dest": "/api/server.js" }
-    ]
+    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
   }
-  
