--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
-    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+    "functions": {
+      "api/index.js": {
+        "runtime": "nodejs18.x"
+      }
+    }
   }
+  
