--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-    "functions": {
-      "api/index.js": {
-        "runtime": "nodejs18.x"
-      }
-    }
-  }
-  
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/index.js" },
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
+}
